use jdk internal asm, which is always up to date with the version of the jdk